# netcanv

./: .editorconfig  .gitignore  .lite_project.lua  Cargo.toml  README.md  build.rs  make_appimage.sh  rustfmt.toml
.github/: FUNDING.yml
.github/workflows/: build-appimage.yaml  build-exe.yaml  build.yaml  generate-appimages.yaml
appimage/: generate.sh  netcanv-matchmaker.desktop  netcanv.desktop
contrib/: generate.sh  move-origin.fish  run.py  screenshots.kra
netcanv-i18n/: Cargo.toml
netcanv-i18n-macros/: Cargo.toml
netcanv-i18n-macros/src/: common.rs  error.rs  from_language.rs  lib.rs  translate_enum.rs
netcanv-i18n/src/: error.rs  format.rs  from_language.rs  language.rs  lib.rs  map.rs  translate_enum.rs
netcanv-matchmaker/: Cargo.toml
netcanv-matchmaker/src/: main.rs  packet.rs
netcanv-protocol/: Cargo.toml
netcanv-protocol/src/: client.rs  lib.rs  matchmaker.rs  relay.rs
netcanv-relay/: Cargo.toml
netcanv-relay/src/: main.rs
netcanv-renderer/: Cargo.toml
netcanv-renderer-opengl/: Cargo.toml
netcanv-renderer-opengl/src/: cli.rs  common.rs  font.rs  framebuffer.rs  image.rs  lib.rs  rect_packer.rs  rendering.rs  shape_buffer.rs
netcanv-renderer-skia/: Cargo.toml
netcanv-renderer-skia/src/: conversions.rs  lib.rs  rendering.rs
netcanv-renderer-wgpu/: Cargo.toml
netcanv-renderer-wgpu/src/: batch_storage.rs  cli.rs  common.rs  framebuffer.rs  gpu.rs  image.rs  immediate_geometry.rs  lib.rs  pass.rs  rendering.rs  rounded_rects.rs  text.rs  transform.rs
netcanv-renderer-wgpu/src/gpu/: scene_uniforms.rs
netcanv-renderer-wgpu/src/pass/: images.rs  lines.rs  present.rs  rounded_rects.rs  text.rs  vertex.rs
netcanv-renderer-wgpu/src/pass/shader/: images.wgsl  lines.wgsl  present.wgsl  rounded_rects.wgsl  text.wgsl
netcanv-renderer-wgpu/src/shader/: rounded_rects.wgsl  solid.wgsl
netcanv-renderer-wgpu/src/text/: caches.rs  font.rs  gpu_font.rs  text_renderer.rs
netcanv-renderer/src/: lib.rs
resources/: netcanv-matchmaker.desktop  netcanv.desktop
src/: assets.rs  backend.rs  chunk.rs  cli.rs  clipboard.rs  color.rs  common.rs  config.rs  errors.rs  image_coder.rs  iocomponent.rs  keymap.rs  lib.rs  logger.rs  main.rs  netcanv.rs  paint_canvas.rs  project_file.rs  strings.rs  token.rs  ui.rs  util.rs  viewport.rs  xcoder.rs
src/app/: boot.rs  lobby.rs  mod.rs  paint.rs  state.rs
src/app/paint/: mod.rs  tool_bar.rs
src/app/paint/actions/: leave_room.rs  mod.rs  save_to_file.rs
src/app/paint/tools/: brush.rs  eyedropper.rs  mod.rs  selection.rs  shapes.rs
src/assets/about/: about.hbs  about.toml
src/assets/i18n/: en-US.ftl  language-names.toml  pl-PL.ftl  pl.ftl
src/net/: mod.rs  peer.rs  socket.rs  timer.rs  txqueues.rs
src/paint_canvas/: cache_layer.rs  cached_chunk.rs  chunk.rs  mod.rs
src/ui/: button.rs  color_picker.rs  colorpicker.rs  context_menu.rs  contextmenu.rs  expand.rs  input.rs  mod.rs  radio_button.rs  radiobutton.rs  slider.rs  text_field.rs  textfield.rs  tooltip.rs  view.rs  window.rs
src/ui/wm/: mod.rs  windows.rs
