[package]
name = "netcanv"
version = "0.9.0"
authors = ["liquidev <liquidev@tutanota.com>", "devildefu"]
description = "An online collaborative paint canvas."
repository = "https://github.com/netcanv/netcanv"
license = "Apache-2.0"

edition = "2021"

[workspace]
members = [
   "netcanv-i18n",
   "netcanv-i18n-macros",
   "netcanv-renderer",
   "netcanv-renderer-opengl",
   "netcanv-renderer-wgpu",
   "netcanv-relay",
   "netcanv-protocol",
]

[features]
default = ["renderer-opengl"]
renderer-opengl = ["netcanv-renderer-opengl"]
renderer-wgpu = ["netcanv-renderer-wgpu"]

tracy-profiling = ["profiling/profile-with-tracy"]

[dependencies]

# Common things
heapless = { version = "0.8.0", default-features = false }
once_cell = "1.19.0"
phf = { version = "0.11.2", features = ["macros"] }
strum = { version = "0.26.2", features = ["derive"] }

# Logging
tracing.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-chrome = "0.7.2"
profiling.workspace = true

# CLI
clap = { workspace = true }

# Windowing and graphics
rfd = "0.14.1"
webbrowser = "1.0.1"
image = { version = "0.24.7", default-features = false, features = [
   "png",
   "jpeg",
   "webp",
   "webp-encoder",
] }
usvg = { version = "0.14.0", default-features = false }
resvg = { version = "0.14.0", default-features = false }
tiny-skia = { version = "0.5.0", default-features = false, features = [
   "std",
   "simd",
] }

# Internationalization
sys-locale = "0.3.1"

# Networking
serde = { version = "1.0.209", features = ["derive"] }
bincode = "1.3.2"
tokio = { version = "1.39.3", features = ["full"] }
tokio-tungstenite = { version = "0.23.1", features = [
   "rustls-tls-native-roots", "url"
] }
rustls = { version = "0.23.10", default-features = false, features = ["ring"] }

# Multithreading
nysa = "0.2.2"

# Utilities
directories = "5.0.1"
tempfile = "3.12.0"
toml = "0.8.14"
url = "2.5.2"
web-time = "1.1.0"
futures-util = { version = "0.3", features = ["sink", "std"] }

# Clipboard
arboard = { version = "3.4.0", features = ["wayland-data-control"] }

# Workspace
netcanv-renderer = { path = "netcanv-renderer" }
netcanv-renderer-opengl = { path = "netcanv-renderer-opengl", optional = true }
netcanv-renderer-wgpu = { path = "netcanv-renderer-wgpu", optional = true }
netcanv-protocol = { path = "netcanv-protocol", features = ["i18n"] }

netcanv-i18n = { path = "netcanv-i18n" }

[workspace.dependencies]
clap = { version = "4.5.7", features = ["derive"] }
profiling = "1.0.15"
tracing = "0.1.40"

[profile.release]
lto = "fat"

[patch.crates-io]
arboard = { git = "https://github.com/netcanv/arboard.git" }
