[package]
name = "netcanv"
version = "0.9.0"
authors = ["liquidev <liquidev@tutanota.com>", "devildefu"]
description = "An online collaborative paint canvas."
repository = "https://github.com/netcanv/netcanv"
license = "Apache-2.0"

edition = "2021"

[workspace]
members = [
   "netcanv-i18n",
   "netcanv-i18n-macros",
   "netcanv-renderer",
   "netcanv-renderer-opengl",
   "netcanv-renderer-wgpu",
   "netcanv-relay",
   "netcanv-protocol",
]

[features]
default = ["renderer-opengl"]
renderer-opengl = ["netcanv-renderer-opengl"]
renderer-wgpu = ["netcanv-renderer-wgpu"]

tracy-profiling = ["profiling/profile-with-tracy"]

[dependencies]

# Common things
heapless = { version = "0.8.0", default-features = false }
once_cell = "1.21.3"
phf = { version = "0.11.3", features = ["macros"] }
strum = { version = "0.27.1", features = ["derive"] }

# Logging
tracing.workspace = true
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-chrome = "0.7.2"
profiling.workspace = true

# CLI
clap = { workspace = true }

# Windowing and graphics
rfd = "0.15.3"
webbrowser = "1.0.4"
image = { version = "0.24.7", default-features = false, features = [
   "png",
   "jpeg",
   "webp",
   "webp-encoder",
] }
usvg = { version = "0.14.0", default-features = false }
resvg = { version = "0.14.0", default-features = false }
tiny-skia = { version = "0.5.0", default-features = false, features = [
   "std",
   "simd",
] }

# Internationalization
sys-locale = "0.3.2"

# Networking
serde = { version = "1.0.219", features = ["derive"] }
bincode = "1.3.2"
tokio = { version = "1.44.2", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = [
   "rustls-tls-native-roots", "url"
] }
rustls = { version = "0.23.26", default-features = false, features = ["ring"] }

# Multithreading
nysa = "0.2.2"

# Utilities
directories = "6.0.0"
tempfile = "3.19.1"
toml = "0.8.22"
url = "2.5.4"
web-time = "1.1.0"
futures-util = { version = "0.3", features = ["sink", "std"] }

# Clipboard
arboard = { version = "3.4.0", features = ["wayland-data-control"] }

# Workspace
netcanv-renderer = { path = "netcanv-renderer" }
netcanv-renderer-opengl = { path = "netcanv-renderer-opengl", optional = true }
netcanv-renderer-wgpu = { path = "netcanv-renderer-wgpu", optional = true }
netcanv-protocol = { path = "netcanv-protocol", features = ["i18n"] }

netcanv-i18n = { path = "netcanv-i18n" }
parking_lot = "0.12.3"

[workspace.dependencies]
clap = { version = "4.5.7", features = ["derive"] }
profiling = "1.0.15"
tracing = "0.1.41"

[profile.release]
lto = "fat"

[patch.crates-io]
arboard = { git = "https://github.com/netcanv/arboard.git" }
