[package]
name = "netcanv-matchmaker"
version = "0.1.0"
edition = "2021"

[dependencies]

netcanv-protocol = { path = "../netcanv-protocol" }

tokio = { version = "1.14.0", features = ["full"] }
serde = { version = "1.0.123", features = ["derive"] }
bincode = "1.3.2"
bytemuck = "1.7.2"
nanorand = "0.6.1"
crossbeam-channel = "0.4.4"
anyhow = "1.0.40"

