[package]
name = "netcanv-relay"
version = "2.1.1"
edition = "2021"

[dependencies]

netcanv-protocol = { path = "../netcanv-protocol" }

tokio = { version = "1.39.3", features = ["full"] }
tokio-tungstenite = "0.23.1"
rustls = { version = "0.23.10", default-features = false, features = ["ring"] }
futures-util = { version = "0.3", features = ["sink", "std"] }
serde = { version = "1.0.209", features = ["derive"] }
bincode = "1.3.2"
bytemuck = "1.17.0"
nanorand = "0.7.0"
anyhow = "1.0.75"
structopt = "0.3.25"

tracing.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
