[package]
name = "netcanv-relay"
version = "2.1.1"
edition = "2021"

[dependencies]

netcanv-protocol = { path = "../netcanv-protocol" }

tokio = { version = "1.44.2", features = ["full"] }
tokio-tungstenite = "0.24.0"
rustls = { version = "0.23.26", default-features = false, features = ["ring"] }
futures-util = { version = "0.3", features = ["sink", "std"] }
serde = { version = "1.0.219", features = ["derive"] }
bincode = "1.3.2"
bytemuck = "1.23.0"
fastrand = "2.3.0"
anyhow = "1.0.98"
structopt = "0.3.25"

tracing.workspace = true
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
