[package]
name = "netcanv-renderer-opengl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { workspace = true }
winit = { version = "0.28.7", features = ["serde"] }
glutin = "0.30.10"
glutin-winit = "0.3.0"
raw-window-handle = "0.5.2"
glow = "0.13.1"
memoffset = "0.9.1"
swash = "0.1.17"
smallvec = { version = "1.13.2", features = ["const_generics"] }
glam = "0.28.0"

netcanv-renderer = { path = "../netcanv-renderer" }
