[package]
name = "netcanv-renderer-wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.40"
bitflags = "2.3.2"
bytemuck = "1.13.1"
clap.workspace = true
glam = "0.24.0"
guillotiere = "0.6.2"
profiling.workspace = true
tracing.workspace = true
swash = "0.1.8"
wgpu = "0.18.0"
winit = { version = "0.29.15", features = ["serde", "rwh_05"] }

netcanv-renderer = { path = "../netcanv-renderer" }
